--- a/analysis/datasets/shin.Rmd
+++ b/analysis/datasets/shin.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Trapnell analysis for Ouija"
+title: "Shin analysis for Ouija"
 output:
   html_document: default
   html_notebook: default
