--- a/analysis/datasets/zhou.Rmd
+++ b/analysis/datasets/zhou.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Trapnell analysis for Ouija"
+title: "Zhou analysis for Ouija"
 output:
   html_document: default
   html_notebook: default
@@ -14,6 +14,10 @@ knitr::opts_chunk$set(fig.width = 5, fig.height = 4, cache = TRUE)
 
 suppressPackageStartupMessages(library(scater))
 suppressPackageStartupMessages(library(ggplot2))
+suppressPackageStartupMessages(library(dplyr))
+suppressPackageStartupMessages(library(tidyr))
+suppressPackageStartupMessages(library(viridis))
+suppressPackageStartupMessages(library(gridExtra))
 devtools::load_all("~/oxford/bnlfa/oui/ouija")
 
 
@@ -25,8 +29,6 @@ print(sce)
 # Analysis with Ouija
 
 ## Exploratory analysis
-
-
 
 Create a marker sceset:
 
@@ -83,6 +85,8 @@ We can construct the confusion matrix to find discrete cell types:
 cmat <- confusion_matrix(oui)
 cmo <- confusion_matrix_ordered(oui, cmat)
 plot_confusion(oui, cmo)
+
+cplot <- last_plot()
 ```
 
 And cluster it to find cell types
@@ -104,7 +108,48 @@ plotPCA(sce_marker, colour_by = 'cluster')
 ```
 
 ```{r}
-table(sce_marker$cluster, sce_marker$cell_type)
+tbl <- table(sce_marker$cluster, sce_marker$cell_type) 
+print(tbl)
+```
+
+Turn this into a plot
+
+```{r}
+tdf <- as_data_frame(t(t(tbl) / colSums(tbl))) %>% 
+  rename(Ouija_cluster = Var1, cell_type = Var2)
+
+ggplot(tdf, aes(x = cell_type, y = Ouija_cluster, fill = n)) + 
+  geom_raster() + 
+  # scale_fill_gradient(name = "Proportion of cells assigned") +
+  scale_fill_viridis(name = "Proportion of cells assigned") +
+  theme(legend.position = "top") +
+  labs(x = "Cell type", y = "Ouija cluster")
+
+  
+```
+
+```{r}
+sce_marker$map_pseudotime <- map_pseudotime(oui)
+plot(rank(sce_marker$map_pseudotime), sce_marker$cluster)
+decision_boundaries <- c(19, 79)
+
+```
+
+
+
+# Dynamics
+
+
+```{r}
+reg_df <- regulation_df(oui)
+sig_regs <- significant_regulation(reg_df)
+
+reg_df_all <- inner_join(reg_df, sig_regs, by = "label")
+
+ggplot(reg_df_all, aes(x = param_diffs, fill = signif)) +
+  geom_histogram() + facet_wrap(~ label) +
+  labs(x = "Difference in switch times", subtitle = "Posterior difference in switch times") +
+  scale_fill_brewer(palette = "Set2")
 ```
 
 
@@ -149,7 +194,65 @@ cors <- c(
 df_cor$max_cor <- max(abs(cors))
 ```
 
+```{r}
+decision_boundaries_pst <- sort(map_pseudotime(oui))[decision_boundaries]
+
+expr_df <- as_data_frame(oui$Y) %>% 
+  mutate(ouija_pseudotime = map_pseudotime(oui)) %>% 
+  gather(gene, expression, -ouija_pseudotime)
+
+
+mu_df <- as_data_frame(predicted_expression(oui)) %>% 
+  mutate(ouija_pseudotime = map_pseudotime(oui)) %>% 
+  gather(gene, expression, -ouija_pseudotime) %>% 
+  arrange(ouija_pseudotime)
+
+bg_df <- data_frame(Ouija_cell_type = as.factor(1:3),
+                 xlower = c(0, decision_boundaries_pst),
+                 xupper = c(decision_boundaries_pst, 1),
+                 ylower = -Inf, 
+                 yupper = Inf)
+
+expression_plot <- ggplot(expr_df) +
+  geom_rect(data = bg_df, aes(xmin = xlower, xmax = xupper, 
+                               ymin = ylower, ymax = yupper, fill = Ouija_cell_type),
+                alpha = 0.4) +
+  geom_point(aes(x = ouija_pseudotime, y = expression), alpha = 0.65, color = 'black') + 
+  facet_wrap(~ gene, ncol = 2, 
+             strip.position = 'top') +
+  geom_line(data = mu_df, aes(x = ouija_pseudotime, y = expression), size = 1.2, alpha = 0.7,
+            color = 'black') +
+  scale_color_brewer(palette = "Set2", name = "Cell type") +
+  theme(legend.position = "top",
+        strip.background = element_rect(fill="white")) +
+  ylab("Normalised log expression") +
+  xlab("Ouija pseudotime") +
+  scale_y_continuous(breaks = c(0, 1, 2, 3), expand = c(0, 0))  +
+  scale_x_continuous(expand = c(0, 0), breaks = c(0, 0.2, 0.4, 0.6, 0.8)) +
+    scale_fill_brewer(name = "Ouija cell type", palette = "Set1") +
+    theme(legend.box.margin = margin(b = -10))
+```
+
+Finally sort the table
 
 ```{r}
+colnames(tbl) <- c("EC", "T1-preHSC", "T2-preHSC", "E12-HSC", "E14-HSC")
+rownames(tbl) <- paste("Ouija cell type", 1:3)
+grid.table(tbl)
+```
+
+Overall figure:
+
+```{r, cache = FALSE}
+left_grid <- cowplot::plot_grid(cplot, NULL, ncol = 1, rel_heights = c(2,1),
+                                labels = c("A", "B"), label_size = 12)
+cplot <- cplot + labs(x = "Pseudotime order", y = "Pseudotime order")
+cowplot::plot_grid(left_grid, expression_plot, ncol = 2, labels = c("", "C"), label_size = 12)
+ggsave("../../figs/fig3.png", width = 10, height = 6)
+```
+
+
+
+```{r, cache = FALSE}
 readr::write_csv(df_cor, "../../data/mvt_csv/zhou.csv")
 ```
