--- a/analysis/datasets/dulken.Rmd
+++ b/analysis/datasets/dulken.Rmd
@@ -5,6 +5,25 @@ output:
   html_notebook: default
 ---
 
+
+```{r, include = FALSE}
+cor_to_tidy <- function(d, dataset) {
+  dcor <- cor(d, use = "na")
+  dcor_df <- as_data_frame(dcor) %>% 
+    dplyr::mutate(row_alg = rownames(dcor)) %>% 
+    gather(col_alg, correlation, -row_alg) %>% 
+    mutate(dataset = dataset)
+  lt <- as_data_frame(lower.tri(dcor))
+  colnames(lt) <- colnames(dcor)
+  lt_df <- as_data_frame(lt) %>% 
+    dplyr::mutate(row_alg = rownames(dcor)) %>% 
+    gather(col_alg, is_lower_tri, -row_alg)
+  dcor_df <- inner_join(dcor_df, lt_df, by = c("row_alg", "col_alg"))
+  dcor_df <- dplyr::filter(dcor_df, is_lower_tri)
+  dcor_df
+}
+```
+
 Load libraries and sceset:
 
 ```{r, load-libraries}
@@ -14,6 +33,9 @@ knitr::opts_chunk$set(fig.width = 5, fig.height = 4, cache = TRUE)
 
 suppressPackageStartupMessages(library(scater))
 suppressPackageStartupMessages(library(ggplot2))
+suppressPackageStartupMessages(library(dplyr))
+suppressPackageStartupMessages(library(readr))
+suppressPackageStartupMessages(library(tidyr))
 
 
 devtools::load_all("~/oxford/bnlfa/oui/ouija")
@@ -134,6 +156,11 @@ GGally::ggpairs(d)
 
 ```
 
+```{r, cache = FALSE}
+write_csv(cor_to_tidy(d, "dulken"), "../../data/cor_comp/dulken.csv")
+```
+
+
 ```{r}
 ouija_pst <- map_pseudotime(oui)
 df_cor <- data.frame(
@@ -154,7 +181,7 @@ df_cor$max_cor <- max(abs(cors))
 ```
 
 
-```{r}
+```{r, cache = FALSE}
 readr::write_csv(df_cor, "../../data/mvt_csv/dulken.csv")
 
 ```
